--- a/ASP.Net-Project/ASP.Net-Project.csproj
+++ b/ASP.Net-Project/ASP.Net-Project.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>ASP.Net_Project</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
